src/api/snapshots/tidx__api__views__tests__view_uniswap_volume.snap
---
source: src/api/views.rs
expression: sql
---
WITH Swap AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, concat('0x', lower(substring(topic1, 27))) AS "sender", reinterpretAsUInt256(reverse(unhex(substring(data, 3, 64)))) AS "amount0In", reinterpretAsUInt256(reverse(unhex(substring(data, 67, 64)))) AS "amount1In", reinterpretAsUInt256(reverse(unhex(substring(data, 131, 64)))) AS "amount0Out", reinterpretAsUInt256(reverse(unhex(substring(data, 195, 64)))) AS "amount1Out", concat('0x', lower(substring(topic2, 27))) AS "to"
    FROM logs
    WHERE selector = concat(char(92), 'xd78ad95fa46c994b6551d0da85fc275fe613ce37657fb8d5e3d130840159d822')
) SELECT 
                address as pair,
                toStartOfHour(block_timestamp) as hour,
                COUNT(*) as swap_count,
                SUM("amount0In") + SUM("amount0Out") as volume0,
                SUM("amount1In") + SUM("amount1Out") as volume1
            FROM Swap
            GROUP BY pair, hour
