src/api/snapshots/tidx__api__views__tests__view_whale_transfers.snap
---
source: src/api/views.rs
expression: sql
---
WITH Transfer AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, concat('0x', lower(substring(topic1, 27))) AS "from", concat('0x', lower(substring(topic2, 27))) AS "to", reinterpretAsUInt256(reverse(unhex(substring(data, 3, 64)))) AS "value"
    FROM logs
    WHERE selector = concat(char(92), 'xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef')
) SELECT block_num, "from", "to", "value"
            FROM Transfer
            WHERE "value" > 1000000000000000000000
            ORDER BY block_num DESC
